# testing_training

./: .gitignore  CMakeLists.txt  LICENSE
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/inc/: common.h
src/src/: main.cpp
